[project]
name = "pokeparkrando"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nlzss11 = "^1.6"
libwiipy = "^0.6.0"
disc-riider-py = "==0.3.1"
PySide6 = "^6.6.2"


[tool.poetry.group.build.dependencies]
pyinstaller = "^6.4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
